Terraform/Codes/5_count_foreach_depends_conditional_statement/main.tf
# This Terraform configuration creates a ec2 instance with nginx installed

# key pair 
resource "aws_key_pair" "my_key" {
  key_name   = "my_terraform_key"
  public_key = file("my_terraform_key.pub")
}

# vpc and security group 
resource "aws_default_vpc" "default" {

}

resource "aws_security_group" "my_sec_group" {
  name        = "mysecgroup"
  description = "Allow SSH, HTTP, 8000 inbound traffic"
  vpc_id      = aws_default_vpc.default.id # interpolation syntax to get the id of the default vpc

  tags = {
    Name        = "My security group"
    Environment = "Dev"
  }

  # inbound rules
  # ssh access
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow SSH access"
  }

  # http access
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow HTTP access"
  }

  # 8000 access
  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow 8000 access"
  }

  # outbound rules
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow all outbound traffic"
  }
}


resource "aws_instance" "my_instance" {
  key_name        = aws_key_pair.my_key.key_name
  security_groups = [aws_security_group.my_sec_group.name]

  # Meta-argument to create multiple instances but all with the same name
  # count           = 3   

  # Meta-argument to create multiple instances with different names and types                     
  for_each = tomap({
    "instance1" = "t2.micro",
    "instance2" = "t2.medium"
  })

  # Meta-argument to ensure the security group and key pair are created before the instance
  depends_on = [aws_security_group.my_sec_group, aws_key_pair.my_key]


  # instance_type   = var.ec2_instance_type  # This would be the same name for all instances if using count 
  instance_type = each.value
  ami           = var.ec2_ami_id
  user_data     = file("nginx_install.sh") # script to install nginx


  root_block_device {
    # volume_size           = var.root_block_device["volume_size"]
    # Conditional statement to set volume size based on environment (ternary operator)
    volume_size           = var.env == "prod" ? 20 : var.root_block_device["volume_size"]
    volume_type           = var.root_block_device["volume_type"]
    delete_on_termination = var.root_block_device["delete_on_termination"]
  }

  tags = {
    # Name        = "My instance"  # This would be the same name for all instances if using count 
    Name        = each.key
    Environment = var.env
  }

}
